Upgrade core stack to Java 25 and Spring 7.0 (unfinished)
- Upgraded Java version from 1.8 to 25.
- Updated Spring Framework from 4.1.5.RELEASE to 7.0.5.
- Updated multiple third-party dependencies to their latest versions.
- Refactored codebase to align with modern API changes:
    - Updated Hibernate/JPA method calls (e.g., saveOrUpdate -> merge,
delete -> remove).
    - Replaced Query setter methods (e.g., setString -> setParameter).
    - Fixed imports and adjusted logic previously relying on deprecated
ClassMetadata.
- Restored legacy Hibernate helper classes (HibernateDaoSupport,
HibernateCallback, HibernateTemplate) as stubs to maintain compilation
during migration.
- Removed deprecated GZIPFilter.